# arrow-kanban

./: Cargo.toml  README.md
src/: crud.rs  display.rs  embeddings.rs  lib.rs  main.rs  persist.rs  persistence.rs  pr_cli.rs  query.rs
tests/: cli_integration.rs  migration_integration.rs
